XMLBEANS-532: Streamline build.xml and update tests to Junit4
git-svn-id: https://svn.apache.org/repos/asf/xmlbeans/trunk@1851656 13f79535-47bb-0310-9956-ffa450edef68